# ConceptV2

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt  main.cpp
Engine/IO/: FileManager.cpp
Engine/cmake/: CMakeLists.txt
Engine/src/: Engine.cpp
Engine/src/io/: FileManager.cpp  FileManager.hpp
Game/cmake/: CMakeLists.txt
Source/: main.cpp
proj.android/: settings.gradle
proj.android/app/: CMakeLists.txt  build.gradle
proj.android/app/src/androidTest/java/com/example/edfil/conceptv2/: ExampleInstrumentedTest.java
proj.android/app/src/main/: AndroidManifest.xml
proj.android/app/src/main/cpp/: native-lib.cpp
proj.android/app/src/main/java/: org
proj.android/app/src/main/java/com/example/edfil/conceptv2/: MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  SDLActivity.java
proj.android/app/src/main/jni/: sdlactivity.c  sdlactivity.cpp
proj.android/app/src/test/java/com/example/edfil/conceptv2/: ExampleUnitTest.java
proj.win32/: DebugSetup.bat  ReleaseSetup.bat
